add analytics and co-change files, update th ui and fix sync api call issues
